--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-gold-21: #fded88;
   --color-gold-22: #f8c346;
   --color-black-bg: #1a1d20;
+  --color-red-error: #ff2839;
 
   --color-angular-gradient-1: #e8dca5;
   --color-angular-gradient-2: #dbcc97;
@@ -13,35 +14,46 @@
   --color-angular-gradient-6: #e9ddab;
 
   --font-poppins-semibold: Poppins-SemiBold;
+  --font-poppins-medium: Poppins-Medium;
   --font-poppins-light: Poppins-Light;
   --font-montserrat-extrabold: Montserrat-ExtraBold;
   --font-montserrat-medium: Montserrat-Medium;
+
+  --my-error-filter: brightness(0) saturate(100%) invert(29%) sepia(52%)
+    saturate(6675%) hue-rotate(342deg) brightness(104%) contrast(100%);
 }
 
 @font-face {
   font-family: Poppins-SemiBold;
-  src: url("./assets/fonts/Poppins-SemiBold.ttf"), "truetype";
+  src: url("./assets/fonts/Poppins-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
+  font-family: Poppins-Medium;
+  src: url("./assets/fonts/Poppins-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
   font-family: Poppins-Light;
-  src: url("./assets/fonts/Poppins-Light.ttf"), "truetype";
+  src: url("./assets/fonts/Poppins-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: Montserrat-ExtraBold;
-  src: url("./assets/fonts/Montserrat-ExtraBold.ttf"), "truetype";
+  src: url("./assets/fonts/Montserrat-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: Montserrat-Medium;
-  src: url("./assets/fonts/Montserrat-Medium.ttf"), "truetype";
+  src: url("./assets/fonts/Montserrat-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
